fixed alignment

--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@ body{
     background-color: hsl(0, 0%, 8%);
     color: white;
     font-size: 16px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    margin: 0;
 }
 
 @font-face {
@@ -19,7 +25,7 @@ p{
     border-radius: 10px;
     max-width: 350px;
     padding: 2rem;
-    margin: 3rem auto;
+    margin: 5rem auto;
     display: block;
     align-items: center;
     justify-content: center;
